==> arendst/Tasmota/lib/lib_i2c/mlx90640/MLX90640_API.cpp <==
#include <MLX90640_API.h>
#include <math.h>
#include <Wire.h>
  #define I2C_BUFFER_LENGTH 128

int MLX90640_I2CRead(uint8_t addr, uint32_t reg, uint16_t len, uint16_t *reg_data){
  int bytesRemaining = len * 2;
  int dataSpot = 0; //Start at beginning of array
  while (bytesRemaining > 0)
  {
    Wire.beginTransmission(addr);
    Wire.write(reg >> 8); //MSB
    Wire.write(reg & 0xFF); //LSB
    if (Wire.endTransmission(false) != 0) //Do not release bus
    {
      return (0); //Sensor did not ACK
    }
    int numberOfBytesToRead = bytesRemaining;
    if (numberOfBytesToRead > I2C_BUFFER_LENGTH) numberOfBytesToRead = I2C_BUFFER_LENGTH;
    Wire.requestFrom((int)addr, numberOfBytesToRead);
    if (Wire.available())
    {
      for (uint32_t x = 0 ; x < numberOfBytesToRead / 2; x++)
      {
        reg_data[dataSpot] = Wire.read() << 8; //MSB
        reg_data[dataSpot] |= Wire.read(); //LSB
        dataSpot++;
      }
    }
    bytesRemaining -= numberOfBytesToRead;
    reg += numberOfBytesToRead / 2;
  }
  return (0); //Success
}

int MLX90640_I2CWrite(uint8_t _deviceAddress, unsigned int writeAddress, uint16_t data)
{
  Wire.beginTransmission((uint8_t)_deviceAddress);
  Wire.write(writeAddress >> 8); //MSB
  Wire.write(writeAddress & 0xFF); //LSB
  Wire.write(data >> 8); //MSB
  Wire.write(data & 0xFF); //LSB
  if (Wire.endTransmission() != 0)
  {
    //Sensor did not ACK
    return (-1);
  }
  uint16_t dataCheck;
  MLX90640_I2CRead(_deviceAddress, writeAddress, 1, &dataCheck);
  if (dataCheck != data)
  {
    return -2;
  }
  return (0); //Success
}
